force-app/main/default/objects/CompetitorData__c/CompetitorData__c.object-meta.xml
<CustomObject>
    <label>Competitor Data</label>
    <nameField>
        <displayFormat>CD - {000000}</displayFormat>
        <label>Competitor Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>