force-app/main/default/objects/CompetitorData__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Competitor Data</relationshipLabel>
    <relationshipName>CompetitorData</relationshipName>
    <type>Lookup</type>
</CustomField>