force-app/main/default/objects/CompetitorData__c/fields/Ship_To_Account_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account_ZipCode__c</fullName>
    <description>Ship to Account Zip Code</description>
    <formula>Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Account ZipCode</label>
    <type>Text</type>
</CustomField>