force-app/main/default/objects/CompetitorData__c/fields/Total_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Revenue__c</fullName>
    <label>Total Annual Revenue</label>
    <summarizedField>CompetitorDataDetail__c.Service_Annual_Revenue__c</summarizedField>
    <summaryForeignKey>CompetitorDataDetail__c.CompetitorData__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>