force-app/main/default/objects/CompetitorData__c/fields/Total_Number_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Services__c</fullName>
    <label>Total Number of Services</label>
    <summaryForeignKey>CompetitorDataDetail__c.CompetitorData__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>