force-app/main/default/objects/CompetitorData__c/validationRules/Account_or_Lead_must_be_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_or_Lead_must_be_Populated</fullName>
    <active>true</active>
    <description>Landscape must be linked to an account or a lead</description>
    <errorConditionFormula>AND( Account__c =&quot;&quot;, Lead__c =&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Landscaping must be attached to a Lead or Account</errorMessage>
</ValidationRule>