force-app/main/default/objects/CompetitorData__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Annual_Revenue__c</columns>
    <columns>Ship_To_Address__c</columns>
    <columns>Total_Number_of_Services__c</columns>
    <columns>Ship_To_Account_ZipCode__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>